# nexasec-studio

./: .gitignore  ROADMAP.md  m1-changes.patch  m1-changes.patch:Zone.Identifier  m2-changes.patch  m2-changes.patch:Zone.Identifier  pyproject.toml
ai/whisper/: README.md
motion-graphics/: index.html  meta.json
motion-graphics/compositions/: chapter-card.html  intro.html  lower-third.html  outro.html
nexasec/: cli.py
nexasec/commands/: audio.py  audio_sync.py  build.py  captions.py  clip.py  create.py  export.py  graphics.py  import_video.py  timeline.py
nexasec/core/: bidi_formatter.py  clip.py  clip_store.py  metadata.py  project.py  style.py  subtitle_writer.py  text_correction.py  timeline.py  timeline_builder.py
nexasec/models/: clip.py  timeline.py  video.py
nexasec/services/: audio_aligner.py  audio_extractor.py  audio_sync.py  caption_builder.py  clip_attacher.py  clip_importer.py  clip_syncer.py  clip_transcriber.py  motion_graphics.py  render_engine.py  transcriber.py  video_analyzer.py  video_importer.py  video_parser.py
projects/lesson-001/: metadata.json
projects/lesson-002/: metadata.json
tests/: check_cuda.py  conftest.py  test_analyzer.py  test_audio_aligner.py  test_bidi_formatter.py  test_caption_builder.py  test_clip_attacher.py  test_clip_model.py  test_clip_store.py  test_clip_sync.py  test_clip_syncer.py  test_clip_transcriber.py  test_motion_graphics.py  test_motion_graphics_compositions.py  test_parser.py  test_render_engine.py  test_subtitle_writer.py  test_text_correction.py  test_timeline.py
(+6 files in other folders)
