[project]
name = "nexasec-studio"
version = "0.1.0"
description = "AI-powered YouTube editing pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.scripts]
nexa = "nexasec.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexasec"]